Fixing arrow spacing per Rem's suggestion

--- a/mail/css/style-narrow.css
+++ b/mail/css/style-narrow.css
@@ -105,3 +105,8 @@ spaghetti code by unbendablestraw. some code was used from html5 up, css3 please
 		{
 			display: none;
 		}
+
+#content {
+    /* padding-bottom: 50px; */
+    height: 345px;
+}
